--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,45 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  min-width: 100vw;
   min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
+  background-color: white;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  overflow-x: hidden;
+}
+
+.Menu { 
+  width: 100px;
+  height: 100%;
+  background: grey;
+  margin-right: 20px;
+  margin-left: 80px;
+  margin-top: 50px;
+
+}
+
+main {
+  flex: 1;
+  height: 100%;
+  background-color: blue;
+  margin-right: 100px;
+  margin-top: 50px;
+}
+
+.logo {
+  width: 80px;
+  min-width: 40px;
+}
+
+.logoContainer {
+  width: 60px;
+  height: 60px;
+  min-width: 50px;
+  border-radius: 20px;
+  border: 3px solid black;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  align-items: center;
+  box-shadow: 0px 5px rgba(63, 59, 59 0.15);
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
