--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,14 +7,14 @@ body{
 }
 
 .nav{
-  width: 100%;
+  width: auto;
   height: 60px;
   background-color: transparent;
   padding: 10px;
   display: inline-block;
   display: flex;
   align-items: center;
-  justify-content: right;
+  margin-left: 100px;
 }
 .search-bar{
   width: 100%;
@@ -43,6 +43,7 @@ body{
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
 }
 
 .sidebar-img{
@@ -50,6 +51,7 @@ body{
   height: 100%;
   object-fit: contain;
   align-self: flex-start;
+  cursor: pointer;
 }
 
 .sidebar-profile-pic{
@@ -89,4 +91,60 @@ body{
 .sidebar-login button:hover,
 .sidebar-nav button:hover{
   background-color: #cd0533;
+}
+
+.content{
+  flex-grow: 1;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.login-logo{
+  width: 25%;
+  cursor: pointer;
+}
+
+.login-title {
+  text-align: center;
+  border: 1px solid #ccc;
+  border-radius: 50px;
+  margin-left: 100px;
+}
+
+.login-container{
+  margin: 1rem;
+  padding: 2rem 2rem;
+  text-align: center;
+}
+.login-form{
+  display: flex;
+  padding: 2rem 2rem;
+  vertical-align: middle;
+  justify-content: space-evenly;
+}
+
+.signup-logo{
+  width: 25%;
+  cursor: pointer;
+}
+
+.signup-title {
+  text-align: center;
+  border: 1px solid #ccc;
+  border-radius: 50px;
+  margin-left: 100px;
+}
+
+.signup-container{
+  margin: 1rem;
+  padding: 2rem 2rem;
+  text-align: center;
+}
+.signup-form{
+  display: flex;
+  padding: 2rem 2rem;
+  vertical-align: middle;
+  justify-content: space-evenly;
 }
