--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -34,10 +34,10 @@
 }
 
 .iconContainer {
-  width: 80px;
-  height: 80px;
+  width: 100px;
+  height: 100px;
   min-width: 50px;
-  border-radius: 45px;
+  border-radius: 60px;
   border: 3px solid black;
   display: flex;
   flex-direction: column;
@@ -50,7 +50,7 @@
 }
 
 .iconContainer span {
-  font-size: 12px;
+  font-size: 16px;
 }
 
 .iconContainer:hover {
@@ -71,7 +71,7 @@ main {
   margin-top: 20px;
   display: grid;
   justify-content: center;
-  grid-template-columns: repeat(auto-fill, 400px);
+  grid-template-columns: repeat(auto-fit, 400px);
 
 }
 
@@ -94,7 +94,7 @@ main {
   width: 100%;
   border: none;
   outline: none;
-  font-size: 16px;
+  font-size: 25px;
 }
 
 
@@ -104,6 +104,7 @@ main {
   margin: 10px;
   position: relative;
   overflow: hidden;
+  box-shadow: 0px 3px 16px rgb(78, 78, 78);
 }
 
 .pin img {
