--- a/frontend/src/css/SearchBar.css
+++ b/frontend/src/css/SearchBar.css
@@ -3,14 +3,17 @@
   align-items: center;
   justify-content: center;
   background-color: white;
-  width: 100%;;
+  width: 100%;
   padding: 12px 15px;
   margin: 50px 30px 0 240px;
   border-radius: 15px;
   border: 2px solid black;
   box-shadow: 0px 3px 16px rgb(78, 78, 78);
   cursor: pointer;
-  max-width: 84vw;
+  max-width: 80vw;
+  position: sticky;
+  top: 15px;
+  z-index: 100;
   }
   
 .searchBar input {
