--- a/frontend/src/css/Login.css
+++ b/frontend/src/css/Login.css
@@ -3,21 +3,47 @@
 }
 
 .login-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .login-form {
-    display: flex;
-    flex-direction: column;
-    margin-left: 20px;
-  }
-
-.login-logo {
-    cursor: pointer;
-  }
+  display: flex;
+  flex-direction: column;
+  margin-left: 60px;
+}
 
 .login-title, .login-form {
-    font-size: 30px;
-  }
+  font-size: 30px;
+}
+
+.login-form input {
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0px 3px 10px rgb(78, 78, 78);
+  width: 400px;
+}
+
+.login-form input::placeholder {
+  font-size: 20px;
+}
+
+img {
+  width: 30vw;
+}
+
+Button {
+  padding: 10px;
+  font-size: 24px;
+  box-shadow: 0px 3px 10px rgb(78, 78, 78);
+  border-radius: 10px;
+  transition: 0.3s;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+Button:hover {
+  color: white;
+  background-color: rgb(74, 95, 250);
+}
