--- a/frontend/src/css/Login.css
+++ b/frontend/src/css/Login.css
@@ -19,10 +19,12 @@
 }
 
 .login-form input {
-  padding: 10px;
+  font-size: 20px;
+  padding: 13px;
   border-radius: 10px;
   box-shadow: 0px 3px 10px rgb(78, 78, 78);
   width: 400px;
+  margin-bottom: 10px;
 }
 
 .login-form input::placeholder {
