--- a/frontend/src/css/Signup.css
+++ b/frontend/src/css/Signup.css
@@ -1,3 +1,56 @@
 .signup-page {
     margin: 20px 0 0 300px;
 }
+
+.signup-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+  
+.signup-form {
+    flex-direction: column;
+    margin: 0 0 0 60px;
+    
+}
+
+.signup-form img {
+    width: 30vw;
+}
+
+.signup-title, .signup-form {
+    font-size: 30px;
+}
+
+.signup-form input {
+    font-size: 20px;
+    padding: 13px;
+    border-radius: 10px;
+    box-shadow: 0px 3px 10px rgb(78, 78, 78);
+    width: 400px;
+    margin-bottom: 10px;
+}
+
+.signup-form input::placeholder {
+    font-size: 20px;
+}
+
+Button {
+    padding: 10px;
+    font-size: 24px;
+    box-shadow: 0px 3px 10px rgb(78, 78, 78);
+    border-radius: 10px;
+    transition: 0.3s;
+    cursor: pointer;
+    margin-top: 20px;
+}
+
+Button:hover {
+    color: white;
+    background-color: rgb(74, 95, 250);
+}
+
+img {
+    width: 30vw;
+}
+  
