--- a/frontend/src/css/AddPin.css
+++ b/frontend/src/css/AddPin.css
@@ -1,3 +1,63 @@
 .add-pin-page {
     margin: 20px 0 0 300px;
 }
+
+.add-pin-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.add-pin-form {
+    display: flex;
+    flex-direction: column;
+    margin-left: 60px;
+}
+
+.add-pin-title, .add-pin-form {
+    font-size: 30px;
+}
+
+.add-pin-form input {
+    font-size: 20px;
+    padding: 13px;
+    border-radius: 10px;
+    box-shadow: 0px 3px 10px rgb(78, 78, 78);
+    width: 400px;
+    margin-bottom: 10px;
+}
+
+.add-pin-form textarea {
+    font-size: 20px;
+    font-family: Arial;
+    height: 100px; 
+    border-radius: 10px;
+    box-shadow: 0px 3px 10px rgb(78, 78, 78);
+    width: 400px;
+    padding: 13px;
+    margin-bottom: 10px;
+}
+
+.mb-3 {
+    display: flex;
+    flex-direction: column;
+}
+
+img {
+    width: 30vw;
+}
+
+Button {
+    padding: 10px;
+    font-size: 24px;
+    box-shadow: 0px 3px 10px rgb(78, 78, 78);
+    border-radius: 10px;
+    transition: 0.3s;
+    cursor: pointer;
+    margin-top: 20px;
+}
+  
+Button:hover {
+    color: white;
+    background-color: rgb(74, 95, 250);
+}
