--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -40,13 +40,15 @@ main {
   position: relative;
   overflow: hidden;
   box-shadow: 0px 3px 16px rgb(78, 78, 78);
-  }
+  object-fit: cover;
+  object-position: center;
+}
   
 .pin img {
   width: 100%;
   height: auto;
   display: block;
-  object-fit: cover;
+
 }
 
 .pin:hover {
