--- a/frontend/src/css/Profile.css
+++ b/frontend/src/css/Profile.css
@@ -1,5 +1,5 @@
 .profile-container{
-    margin: 20px 0 0 300px;
+    margin: 100px 0 0 300px;
 }
 
 .profile-info{
@@ -9,13 +9,26 @@
 }
 
 .profile-picture img{
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
     margin-right: 20px;
 }
+.profile-picture:hover {
+    cursor: pointer;
+}
 
-.profile-pins h2{
+.profile-title {
+    font-size: 30px;
+}
+
+.user-info {
+    font-size: 20px;
+    margin-left: 20px;
+}
+
+.pins-title {
+    font-size: 25px;
     margin-bottom: 20px;
     align-items: center;
 }
@@ -30,15 +43,17 @@
 }
 
 .pins img {
-    width: 150px;
-    height: 150px;
+    width: 190px;
+    height: 190px;
     border-radius: 8px;
+    box-shadow: 0px 3px 10px rgb(78, 78, 78);;
 }
 
 .edit-delete{
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 10px
 }
 
 .delete:hover {
