--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -46,9 +46,8 @@ main {
   
 .pin img {
   width: 100%;
-  height: auto;
-  display: block;
-
+  height: 100%;
+  object-fit: cover;
 }
 
 .pin:hover {
